# cantor

./: .gitignore  .project  CHANGES  LICENSE  README.md  abel.cabal  cantor.cabal  mavex.cabal  stack.yaml
doc/: steps.md  todo.md  usage.md
doc/report/: index.html
fixtures/Maven/project1/: pom.xml
fixtures/java/com/abc/ef/: Parser2.java
fixtures/java/dependency1/: Root.java
fixtures/java/dependency1/net/abc/: Mars.java  Moon.java
fixtures/java/dependency1/net/foo/: Solaris.java
fixtures/java/design/ex1/: Customer.java  Movie.java  Rental.java  about.txt
fixtures/java/src1/com/abc/: Parser.java
fixtures/java/src2/: Root.java
fixtures/java/src2/net/foo/: Solaris.java
fixtures/maven/minimal/: pom.xml
fixtures/maven/project1/: pom.xml
src/: Main.hs  MainFrame.hs  Messages.hs  Report.hs
src/AST/: Dependency.hs  JavaParser.hs  Model.hs
src/AST/Parser/: JavaParser.hs
src/Cantor/: BuildSystem.hs  Expert.hs  KnowledgeDB.hs  Project.hs  Report.hs
src/Cantor/Analysis/: Dependency.hs  Language.hs  Metrics.hs
src/Cantor/Parser/: AST.hs  BuildSystem.hs  Cabal.hs  Java.hs  Maven.hs
src/Cantor/Utils/: Folder.hs  List.hs
src/GUI/: AppWindow.hs  GuiApp.hs  MainFrame.hs  WaitDialog.hs
src/Maven/: Pom.hs
src/Metric/: Basic.hs
src/Project/: Core.hs  Java.hs  Maven.hs  Model.hs  Sources.hs  Types.hs
src/Report/: Builder.hs  Diagram.hs  Html.hs
src/Utils/: Folder.hs  Graph.hs  List.hs
src/Visualize/: Diagram.hs
test-src/: AllTests.hs  Spec.hs
test-src/AST/: DependencySpec.hs  JavaParserSpec.hs
test-src/AST/Parser/: JavaParserSpec.hs
test-src/Abel/: IndexTest.hs
test-src/Cantor/Metric/: BasicSpec.hs
test-src/Cantor/Parser/: JavaSpec.hs
test-src/Cantor/Parser/Java/: MavenSpec.hs  ParserSpec.hs  ProjectSpec.hs
test-src/Cantor/Utils/: FolderSpec.hs
test-src/Maven/: PomTest.hs
test-src/Metric/: BasicSpec.hs
test-src/Project/: JavaSpec.hs  MavenSpec.hs  MavenTest.hs  SourcesSpec.hs
test-src/Utils/: FolderSpec.hs  FolderTest.hs
