name:           abel
version:        0.4
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Gather information from source code
homepage:       https://github.com/klangner/abel
Bug-reports:    https://github.com/klangner/abel/issues
stability:      Unstable interface, incomplete features.
category:       Application, source code analysis
License:        BSD3
License-file:   LICENSE
Extra-Source-Files:
                CHANGES
description:    
    Application for analyzing Java source code

source-repository head
  type:     git
  location: https://github.com/klangner/abel

executable abel
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4 && <4.7

  ghc-options:      -Wall

test-suite unit-tests
  type:             detailed-0.9
  test-module:      AllTests
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts
  build-depends:   
                    base >= 4 && <4.7,
                    HUnit >=1.2.5 && <1.3,
                    Cabal >=1.16.0 && <1.17,
                    containers >=0.5.0 && <0.6

  other-modules:   
                    Abel.IndexTest,
                    Distribution.TestSuite.HUnit
  hs-source-dirs:  
                    src,
                    test-src

