name:           cantor
version:        0.5
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Application for analysis of java source code
homepage:       https://github.com/klangner/cantor
Bug-reports:    https://github.com/klangner/cantor/issues
stability:      Unstable interface, incomplete features.
category:       Application, source code analysis
License:        BSD3
License-file:   LICENSE
Extra-Source-Files:
                CHANGES
description:    
    Cantor is application for analyzing software projects.
    The goal of this application is to help developer understand source code of unknown project.
    .
    Currently cantor finds the following information about the project:
    .
    * The language the application is written in
    .
    * What build system is used to build application

source-repository head
  type:     git
  location: https://github.com/klangner/cantor

executable cantor
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    
                    base >= 4 && <5,
                    directory >=1.2.0 && <1.3,
                    filepath >=1.3.0 && <1.4,
                    hxt >= 9.3 && <10,
                    hxt-xpath >= 9.1 && <10,
                    parsec >=3.1 && <4,
                    containers >=0.5 && <1,
                    bytestring >=0.10.0 && <1,
                    split >=0.2.2 && <0.3,
                    text >= 1.2 && <2
                    

  ghc-options:      -Wall -threaded

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:   
                    base >= 4 && <5,
                    Cabal >=1.16 && <2,
                    directory >=1.2.0 && <2,
                    filepath >=1.3.0 && <2,
                    hspec >= 2 && <3,
                    hxt >= 9.3 && <10,
                    hxt-xpath >= 9.1 && <10,
                    QuickCheck >=2.6 && <3,
                    parsec >=3.1.3 && <4,
                    containers >=0.5.0 && <1,
                    bytestring >=0.10.0 && <1,
                    split >=0.2.2 && <1
                    --text >= 1.2 && <2

  hs-source-dirs:
                    src,
                    test-src

