name:           mavex
version:        0.1
cabal-version:  >= 1.10
build-type:     Simple
author:         Krzysztof Langner
maintainer:     klangner@gmail.com
synopsis:       Analiza Java source code
homepage:       https://github.com/klangner/mavex
Bug-reports:    https://github.com/klangner/mavex/issues
stability:      Unstable interface, incomplete features.
category:       Application, source code analysis
License:        BSD3
License-file:   LICENSE
Extra-Source-Files:
                CHANGES
description:    
    Application for analyzing Java source code

source-repository head
  type:     git
  location: https://github.com/klangner/mavex

executable mavex
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4 && <4.7

  ghc-options:      -Wall
  other-modules:    Maven.Pom

test-suite unit-tests
  type:             detailed-0.9
  test-module:      AllTests
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts
  build-depends:   
                    base >= 4 && <4.7,
                    HUnit >=1.2.5 && <1.3,
                    Cabal >=1.16.0 && <1.17,
                    containers >=0.5.0 && <0.6

  other-modules:   
                    Distribution.TestSuite.HUnit,
                    Maven.Pom
  hs-source-dirs:  
                    src,
                    test-src

